# bookin

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bookin/: __main__.py  calibre.py  cli.py  config.py  errors.py  processor.py  watcher.py
tests/: test_calibre.py  test_processor.py
